# py-rofi-bus

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  tox.ini
examples/rofi-alt-tab/: active_window_monitor_daemon.py  dbus_window_daemon.py  ordered_window_script.py
proof-of-concept/: README.rst  dbus_server.py  rofi_window_script.py
py_rofi_bus/: __init__.py  dbus_daemon.py  dbus_server.py  main_dbus_daemon.py  window_listener.py
py_rofi_bus/cli/: __init__.py  application.py  daemon.py
py_rofi_bus/components/: __init__.py  config.py  daemon.py  script.py
py_rofi_bus/components/mixins/: __init__.py  has_config.py  has_pid.py  manages_processes.py
py_rofi_bus/dbus/: daemon.py
py_rofi_bus/utils/: __init__.py  mkdirp_function.py
tests/: test_main_dbus_daemon.py
tests/cli/: test_application_cli.py  test_daemon_cli.py
tests/components/: test_config_object.py  test_daemon.py  test_daemon_process.py
tests/components/mixins/: test_has_config.py  test_has_pid.py
tests/dbus/: test_daemon.py
tests/mixins/: test_has_pid.py
tests/utils/: test_mkdirp.py
