[metadata]
name = py-rofi-bus
version = 0.0.3
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = ISC
description = A DBus extension for rofi
long_description = file: README.rst
keywords =
    rofi
    xcb
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: X11 Applications
url = https://github.com/thecjharries/py-rofi-bus#readme
project_urls =
    Issue Tracker = https://github.com/thecjharries/py-rofi-bus/issues

; [bdist_wheel]
; universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
	pytest-runner
    pydbus
    xcffib
    xpybutil
tests_require =
	mock
	pytest
    pytest-cov

[options.entry_points]
console_scripts =
    py-rofi-bus = py_rofi_bus.cli.application:Application.bootstrap

[tool:pytest]
addopts = -v -x --color=yes --cov-report html --cov-report term --cov=py_rofi_bus

[aliases]
test = pytest


